# amdep

./: .gitignore  COMMERCIAL.md  LICENSE  NOTICE  README.md  config.py  index.html  pyproject.toml  requirements.txt  run_demo.sh  run_field_kit.bat  run_field_kit.command
amdep/: __init__.py  audit_pipeline.py  brain.py  calibration.py  data_contracts.py  dispatch_gym.py  features.py  field_kit.py  graph_analysis.py  ingestion.py  metrics.py  ml_protocol.py  model_registry.py  naive_scheduler.py  ontology.py  optimizer.py  reports.py  retention.py  robotics.py  roi.py  run_audit.py  synthetic_data.py  train_synthetic_models.py  utils.py  web_demo.py
amdep/integrations/: __init__.py  base.py  exports.py  known_stacks.py
api/: amdep_service.conjure.yml
data/: sample_assets.csv  sample_assignments.csv  sample_jobsites.csv  sample_workers.csv
docs/: ALGORITHM_PRODUCTIZATION.md  BRAIN_LAYER.md  CUSTOMER_AUDIT_PLAYBOOK.md  DEMO_DELIVERY.md  DEMO_METHODOLOGY_AND_DEPLOYMENT.md  DEPLOYMENT_ONTOLOGY.md  DISPATCH_OPTIMIZATION_GYM.md  FIELD_KIT_MODEL_CARD.md  FIELD_KIT_MVP.md  INTEGRATION_STRATEGY.md  ML_PROTOCOL.md  PRODUCT_THESIS.md  PUBLIC_REPO_CHECKLIST.md  ROBOTICS_EXTENSION.md  TRAINING_AND_PRODUCTIZATION.md
field_kit/: app.js  index.html  styles.css
field_kit/ai_booster/: AGENTS.md  (+2 more)
foundry_ready/: README.md  action_types.yaml  ontology_schema.yaml
reports/: example_roi_report.md
scripts/: package_field_kit.py
tests/: test_field_kit.py  test_partial_inputs.py
web/: app.js  demo-data.json  index.html  manifest.webmanifest  service-worker.js  styles.css
(+4 files in other folders)
